--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_10/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_10/styles.css
@@ -10,6 +10,20 @@ body {
     background-color: #101010FF;
 }
 
+a {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+a:link {
+    color: #ff0000;
+}
+
+a:visited {
+    color: #c55d5d;
+}
+
 #content-container{
     display: flex;
     justify-content: center;
