--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_12/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_12/styles.css
@@ -9,6 +9,12 @@ body {
     background-color: #FAEBD7FF;
 }
 
+#back-to-main-index {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
 #content-container {
     width: 992px;
     display: flex;
