Altera questão 4 do tp 2 de javascript

--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_1/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_1/styles.css
@@ -1,29 +1,29 @@
 header{
-    background-color: aliceblue;
+    background-color: #F0F8FFFF;
     height: 25rem;
 }
 
 nav{
-    background-color: lightcoral;
+    background-color: #F08080FF;
     height: 25rem;
 }
 
 section{
-    background-color: wheat;
+    background-color: #F5DEB3FF;
     height: 25rem;
 }
 
 main {
-    background-color: aquamarine;
+    background-color: #7FFFD4FF;
     height: 25rem;
 }
 
 article{
-    background-color: aqua;
+    background-color: #00FFFFFF;
     height: 25rem;
 }
 
 footer {
-    background-color: blueviolet;
+    background-color: #8A2BE2FF;
     height: 25rem;
 }
