--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_11/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/2º Teste de Performance/questao_11/styles.css
@@ -60,8 +60,16 @@ header {
 }
 
 /*IMAGEM DO POST*/
-#post-picture{
+#post-picture-container {
     width: 600px;
+    height: 500px;
+    overflow: hidden;
+}
+
+#post-picture{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #bottom-section{
