--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_1/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_1/styles.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@100..900&display=swap');
 
+body {
+    background-color: #e0e0e0;
+}
+
 #content-container{
     height: 100vh;
-    background-color: #e0e0e0;
 }
 
 p {
