Resolve a questão seis

--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_3/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_3/styles.css
@@ -17,11 +17,13 @@ th {
     color: #ffffff;
     text-decoration: underline;
     height: 25px;
+    padding-left: .5rem;
 }
 
 td {
     height: 25px;
     font-weight: 500;
+    padding-left: .5rem;
 }
 
 tr:nth-child(even) {
