--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_4/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_4/styles.css
@@ -23,7 +23,7 @@ td {
 
 td, th {
     border: 1px solid #1c2632;
-    box-shadow: inset 1px 1px #1d2834, inset -1px -1px 0.01rem #44607a;
+    box-shadow: inset 1px 1px 1px #1d2834, inset -1px -1px 1px #44607a;
     font-family: 'Montserrat', sans-serif;
     padding: 1rem;
 }
