--- a/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_5/styles.css
+++ b/Testes de performance por disciplina/Programação Web com HTML 5 e CSS 3 (P1)/3º Teste de Performance/questao_5/styles.css
@@ -16,9 +16,9 @@ body{
     align-items: center;
     flex-direction: column;
     width: 24rem;
-    height: 37rem;
+    height: 38rem;
     border-radius: 16px 16px 16px 16px;
-    box-shadow: 5px 5px 5px #00000033;
+    box-shadow: -5px -5px 5px #00000033,  5px 5px 5px #00000033;
 }
 
 .top-strip{
@@ -72,6 +72,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 0.5rem;
     text-align: justify;
     padding: 1.5rem;
     line-height: 2rem;
@@ -115,12 +116,12 @@ ul{
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    padding: 0;
-    margin: 0;
-    background-color: var(--purple);
     height: 2.3rem;
     width: 100%;
-
+    padding: 0;
+    margin: 0;
+    border-radius: 0 0 5px 5px;
+    background-color: var(--purple);
     list-style: none;
 }
 
