Pequenas alterações no js

--- a/Assesments/Programação Web com HTML 5 e CSS 3 (P1)/styles/style.css
+++ b/Assesments/Programação Web com HTML 5 e CSS 3 (P1)/styles/style.css
@@ -230,6 +230,10 @@ article > header {
     gap: 0.5rem;
 }
 
+article footer {
+    margin-top: 0.5rem;
+}
+
 .limited-text {
     width: 23rem;
     white-space: nowrap;
