--- a/Assesments/Programação Web com HTML 5 e CSS 3 (P1)/styles/style.css
+++ b/Assesments/Programação Web com HTML 5 e CSS 3 (P1)/styles/style.css
@@ -1,301 +1,311 @@
-@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 :root {
-    --raisin-black: #1B222C;
-    --rich-black: #12151C;
-    --rosewood: #721219;
-    --fire-engine-red: #D10F15;
-    --anti-flash-white: #ECECEC;
+  --raisin-black: #1b222c;
+  --rich-black: #12151c;
+  --rosewood: #721219;
+  --fire-engine-red: #d10f15;
+  --anti-flash-white: #ececec;
 }
 
 * {
-    margin: 0;
+  margin: 0;
 }
 
 /* SCROLL BAR DA PÁGINA */
 ::-webkit-scrollbar {
-    width: 8px;
-    background-color: var(--raisin-black);
+  width: 8px;
+  background-color: var(--raisin-black);
 }
 
 ::-webkit-scrollbar-thumb {
-    background: var(--rosewood);
-    border-radius: 4px;
+  background: var(--rosewood);
+  border-radius: 4px;
 }
 
 /* BODY */
 #content-container {
-    width: 100%;
-    gap: 100px;
-    background-color: var(--rich-black);
-    color: var(--anti-flash-white);
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+  width: 100%;
+  gap: 100px;
+  background-color: var(--rich-black);
+  color: var(--anti-flash-white);
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
 }
 
-
+/* BOTÃO DE VOLTAR AO TOPO */
 #to-top-button {
-    width: 4rem;
-    height: 4rem;
-    position: absolute;
-    bottom: 14rem;
-    right: 4rem;
-    background-color: var(--rosewood);
-    border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  position: absolute;
+  bottom: 14rem;
+  right: 4rem;
+  background-color: var(--rosewood);
+  border-radius: 50%;
 }
 
 #arrow-up {
-    color: var(--raisin-black);
-    font-size: 2.5rem;
-    margin-bottom: 8px;
+  color: var(--raisin-black);
+  font-size: 2.5rem;
+  margin-bottom: 8px;
 }
 
 #arrow-up:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #to-top-button:hover {
-    background-color: var(--fire-engine-red);
+  background-color: var(--fire-engine-red);
 }
 
 /*--HEADER + NAV--*/
 header {
-    height: 5rem;
-    gap: 60%;
-    border-radius: 0 0 16px 16px;
+  height: 5rem;
+  gap: 30rem;
+  border-radius: 0 0 16px 16px;
 }
 
 #icon:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    font-size: 1.3rem;
-    gap: 2rem;
+  list-style-type: none;
+  padding: 0;
+  font-size: 1.3rem;
+  gap: 2rem;
 }
 
 a {
-    text-decoration: none;
-    color: var(--anti-flash-white);
+  text-decoration: none;
+  color: var(--anti-flash-white);
 }
 
 a:hover {
-    color: var(--fire-engine-red);
-    text-decoration: underline;
-    font-weight: bolder;
+  color: var(--fire-engine-red);
+  text-decoration: underline;
+  font-weight: bolder;
 }
 
 /*--MAIN > About Me Section---*/
 main {
-    gap: 400px;
+  gap: 400px;
 }
 
-#about-me{
-    width: 60%;
-    height: 35rem;
-    justify-content: space-between;
+#about-me {
+  width: 60%;
+  height: 35rem;
+  justify-content: space-between;
 }
 
 #photo-gradient-container {
-    width: 22rem;
-    height: 22rem;
+  width: 22rem;
+  height: 22rem;
 }
 
 #gradient {
-    width: 22rem;
-    height: 22rem;
-    background: radial-gradient(50% 50% at 50% 50%, var(--rosewood) 0%, var(--rich-black) 100%);
+  width: 22rem;
+  height: 22rem;
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    var(--rosewood) 0%,
+    var(--rich-black) 100%
+  );
 }
 
 #photo {
-    width: 15rem;
-    height: 15rem;
-    border-radius: 50%;
-    z-index: 1;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  z-index: 1;
 }
 
 #name-title {
-    bottom: 2rem;
-    z-index: 2;
+  bottom: 2rem;
+  z-index: 2;
 }
 
 #description {
-    width: 56rem;
-    text-align: center;
-    font-size: 1.5rem;
+  width: 56rem;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 /* MAIN > Habilities Section*/
-#habilities{
-    width: 70%;
-    height: 55rem;
-    gap: 4rem;
-    border-radius: 16px;
+#habilities {
+  width: 70%;
+  height: 55rem;
+  gap: 4rem;
+  border-radius: 16px;
 
-    box-shadow: 0 0 0.8rem var(--rosewood);
+  box-shadow: 0 0 0.8rem var(--rosewood);
 }
 
 .tech-grid {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
 
 .tech-type-title {
-    font-size: 1.5rem;
-    text-decoration: underline;
+  font-size: 1.5rem;
+  text-decoration: underline;
 }
 
 .tech-container {
-    display: flex;
-    gap: 3rem;
+  display: flex;
+  gap: 3rem;
 }
 
 .tech {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
-svg, g {
-    fill: var(--rosewood);
+svg,
+g {
+  fill: var(--rosewood);
 }
 
-svg:hover, g:hover {
-    fill: var(--fire-engine-red);
+svg:hover,
+g:hover {
+  fill: var(--fire-engine-red);
 }
 
 .tech-icon-container:hover path {
-    fill: var(--fire-engine-red);
+  fill: var(--fire-engine-red);
 }
 
-.tech-icon-container{
-    width: 7rem;
+.tech-icon-container {
+  width: 7rem;
 }
 
 .tech-name {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 /* MAIN > PROJECTS */
-#projects{
-    gap: 2.5rem;
+#projects {
+  gap: 2.5rem;
+  overflow-y: hidden;
 }
 
 #projects > p {
-    font-size: 1.5rem;
-    text-decoration: underline;
+  font-size: 1.5rem;
+  text-decoration: underline;
 }
 
 #repos-container {
-    width: 100rem;
-    height: 16rem;
-    gap: 2rem;
-    overflow-x: scroll;
+  width: 80rem;
+  height: 16rem;
+  gap: 2rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 #repos-container::-webkit-scrollbar {
-    height: 6px;
-    background-color: var(--raisin-black);
+  height: 6px;
+  background-color: var(--raisin-black);
 }
 
 #repos-container::-webkit-scrollbar-thumb {
-    background-color: var(--rosewood);
-    border-radius: 4px;
+  background-color: var(--rosewood);
+  border-radius: 4px;
 }
 
 article {
-    width: 30rem;
-    padding: 2rem;
-    border-radius: 16px;
-    box-shadow: 0 0 0.5rem var(--rosewood);
+  width: 30rem;
+  padding: 2rem;
+  border-radius: 16px;
+  box-shadow: 0 0 0.5rem var(--rosewood);
 }
 
 article:first-child {
-    margin-left: 178rem;
+  margin-left: 200rem;
 }
 
 article > a {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 article > header {
-    width: 25rem;
-    text-overflow: ellipsis;
-    gap: 0.5rem;
+  width: 25rem;
+  text-overflow: ellipsis;
+  gap: 0.5rem;
 }
 
 article footer {
-    margin-top: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .limited-text {
-    width: 23rem;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  width: 23rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* FOOTER */
 #page-footer {
-    margin-top: 200px;
-    height: 7rem;
-    gap: 1rem;
-    border-radius: 16px 16px 0 0;
+  margin-top: 200px;
+  height: 7rem;
+  gap: 1rem;
+  border-radius: 16px 16px 0 0;
 }
 
 #social-grid {
-    gap: 3rem;
+  gap: 3rem;
 }
 
 .social-icon {
-    width: 2.5rem;
+  width: 2.5rem;
 }
 
-.social-icon:hover path,
-.social-icon:hover svg,
-.social-icon:hover g {
-    color: var(--fire-engine-red);
+.social-icon:hover svg path g {
+  color: var(--fire-engine-red);
 }
 
 /* Estilos reutilizáveis -- Visual */
 .background-highlight {
-    background-color: var(--raisin-black);
+  background-color: var(--raisin-black);
 }
 
 .jersey-red {
-    font: normal 4rem "Jersey 10", sans-serif;
-    color: var(--fire-engine-red);
+  font: normal 4rem "Jersey 10", sans-serif;
+  color: var(--fire-engine-red);
+}
+
+.red {
+  color: var(--fire-engine-red);
 }
 
 .underline {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* Estilos reutilizáveis -- Estrutural */
 .flex-row {
-    display: flex;
+  display: flex;
 }
 
 .flex-column {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .flex-center {
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .position-absolute {
-    position: absolute;
+  position: absolute;
 }
 
 .position-relative {
-    position: relative;
+  position: relative;
 }
