--- a/Assesments/Programação Web com HTML 5 e CSS 3 (P1)/styles/style.css
+++ b/Assesments/Programação Web com HTML 5 e CSS 3 (P1)/styles/style.css
@@ -38,11 +38,12 @@
 #to-top-button {
   width: 4rem;
   height: 4rem;
-  position: absolute;
+  position: fixed;
   bottom: 14rem;
   right: 4rem;
   background-color: var(--rosewood);
   border-radius: 50%;
+  border: solid 2px var(--raisin-black);
 }
 
 #arrow-up {
@@ -57,6 +58,7 @@
 
 #to-top-button:hover {
   background-color: var(--fire-engine-red);
+  cursor: pointer;
 }
 
 /*--HEADER + NAV--*/
@@ -225,7 +227,7 @@ article {
 }
 
 article:first-child {
-  margin-left: 200rem;
+  margin-left: 260rem;
 }
 
 article > a {
