--- a/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_8/styles.css
+++ b/Assesments por disciplina/Interatividade em Páginas Web (P1)/questao_8/styles.css
@@ -1,3 +1,14 @@
+#botoes {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+button {
+    cursor: pointer;
+}
+
 img {
     width: 300px;
     height: 300px;
