Continua o desenvolvimento do assessment de Fundamentos de React

--- a/Assesments por disciplina/Fundamentos de React (P3)/research-flow/src/App.css
+++ b/Assesments por disciplina/Fundamentos de React (P3)/research-flow/src/App.css
@@ -5,6 +5,9 @@
     align-items: center;
     overflow: auto;
     gap: 1rem;
+
+    font-family: "Roboto", sans-serif;
+    font-size: 95%;
 }
 
 .flex-column {
@@ -41,4 +44,10 @@
 
 .largeGap {
     gap: 2rem;
+}
+
+button {
+    cursor: pointer;
+    padding: 0.5rem;
+    box-shadow: 0 4px 8px #989898;
 }
