--- a/Assesments por disciplina/Fundamentos de React (P3)/research-flow/src/App.css
+++ b/Assesments por disciplina/Fundamentos de React (P3)/research-flow/src/App.css
@@ -29,6 +29,10 @@
     flex-wrap: wrap;
 }
 
+.spaceBetween {
+    justify-content: space-between;
+}
+
 .listStyleNone {
     list-style: none;
     padding: 0;
@@ -48,6 +52,6 @@
 
 button {
     cursor: pointer;
-    padding: 0.5rem;
+    padding: 0.2rem;
     box-shadow: 0 4px 8px #989898;
 }
