--- a/Assesments por disciplina/Fundamentos de React (P3)/research-flow/src/components/researchCard/ResearchCard.module.css
+++ b/Assesments por disciplina/Fundamentos de React (P3)/research-flow/src/components/researchCard/ResearchCard.module.css
@@ -15,9 +15,34 @@
 .title {
     font-size: 1.5rem;
     font-weight: bold;
+    margin: 0;
 }
 
 .hiddenTextOverflow {
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.starContainer {
+    display: flex;
+    align-items: center;
+}
+
+.starCheckbox {
+    appearance: none;
+    outline: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding: 0;
+    font-size: 1.5rem;
+}
+
+.starCheckbox:before {
+    content: "☆";
+}
+
+.starCheckbox:checked:before {
+    content: "★";
+    color: gold;
 }
