--- a/Assesments por disciplina/Mobile First com React (P3)/portfolio-pessoal/src/App.css
+++ b/Assesments por disciplina/Mobile First com React (P3)/portfolio-pessoal/src/App.css
@@ -5,7 +5,7 @@
 
     margin: 0;
     padding: 1rem;
-    gap: 1rem;
+    gap: 1.5rem;
     box-sizing: border-box;
     font-family: Inter, sans-serif;
 
@@ -68,6 +68,15 @@
     padding: 2rem;
 }
 
+button {
+    cursor: pointer;
+    border: 2px solid #aeeae1;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    background-image: linear-gradient(to bottom, #E0E9FF, #B7FFC6);
+    box-shadow: 0 4px 8px #aeeae1;
+}
+
 .hoverEffect:hover {
     box-shadow: 0 4px 8px 2px #aeeae1;
     transition: box-shadow 0.3s ease-in-out;
@@ -83,6 +92,13 @@
     .hoverEffect:hover {
         box-shadow: 0 4px 8px 2px #0b3d32;
     }
+
+    button {
+        color: #ff9187;
+        background-image: linear-gradient(to bottom, #2c2c2c, #18231a);
+        border: 2px solid #0b3d32;
+        box-shadow: 0 4px 8px #0b3d32;
+    }
 }
 
 
@@ -92,14 +108,14 @@
 /* BREAKPOINT 2 */
 @media (min-width: 768px) {
     #root {
-        gap: 1.2rem;
+        gap: 1.6rem;
     }
 }
 
 /* BREAKPOINT 3 */
 @media (min-width: 1024px) {
     #root {
-        gap: 1.4rem;
+        gap: 1.7rem;
     }
 }
 
